# fedex-notification-service

./: .envrc.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  todo.md
.github/workflows/: deploy-aks.yml  deploy-infra.yml  deploy-on-prem.yml
azure-functions/: .funcignore  README.md  function_app.py  local.settings.example.json  requirements.txt
azure-functions/tests/: test_function_app.py
azure-functions/update-order-status/: db.py  (+5 more)
backend/: composer.json  phpunit.xml
docs/: aks-migration.md
frontend/: angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
function-app/: .funcignore  db.py  email_service.py  function_app.py  pyproject.toml  requirements.txt
function-app/shared/: database.py  email_service.py
function-app/tests/: test_db.py  test_email_service.py  test_function_app.py  test_notifications.py  test_update_order_status.py
infra/: acr.json  aks.json  azuredeploy.json  azuredeploy.parameters.json  communication.json  function-app.json  synapse.json
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  secrets.yaml.example
migrations/: 001_create_businesses.sql  002_create_orders.sql  003_create_shipment_events.sql  004_create_notifications.sql  005_updated_at_trigger.sql  006_set_all_business_contact_emails_to_gb555.sql  seed_large_dataset.sql
scripts/: deploy-infra.sh  deploy-synapse-migration.sh  deploy.sh  export_postgres_for_synapse.sh  migrate_pg_to_synapse.py  provision-aks.sh
(+103 files in other folders)
